kubernetes/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alldaydj-backend
  labels:
    app: alldaydj
spec:
  ports:
    - port: 8000
  selector:
    app: alldaydj
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alldaydj-backend
  labels:
    app: alldaydj
spec:
  selector:
    matchLabels:
      app: alldaydj
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alldaydj
        tier: backend
    spec:
      containers:
        - image: steelegbr/alldaydj-backend:latest
          imagePullPolicy: Always
          name: alldaydj-backend
          ports:
            - containerPort: 8000
              name: alldaydj
