kubernetes/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alldaydj-frontend
  labels:
    app: alldaydj
spec:
  ports:
    - port: 80
  selector:
    app: alldaydj
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alldaydj-frontend
  labels:
    app: alldaydj
spec:
  selector:
    matchLabels:
      app: alldaydj
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alldaydj
        tier: frontend
    spec:
      containers:
        - image: steelegbr/alldaydj-frontend:latest
          name: alldaydj-frontend
          ports:
            - containerPort: 80
              name: alldaydj
