kubernetes/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alldaydj-postgres
  labels:
    app: alldaydj
spec:
  ports:
    - port: 5432
  selector:
    app: alldaydj
    tier: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alldaydj-postgres
  labels:
    app: alldaydj
spec:
  selector:
    matchLabels:
      app: alldaydj
      tier: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alldaydj
        tier: postgres
    spec:
      containers:
        - image: postgres:latest
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
