kubernetes/rabbitmq-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alldaydj-rabbitmq
  labels:
    app: alldaydj
spec:
  ports:
    - port: 5672
  selector:
    app: alldaydj
    tier: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alldaydj-rabbitmq
  labels:
    app: alldaydj
spec:
  selector:
    matchLabels:
      app: alldaydj
      tier: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alldaydj
        tier: rabbitmq
    spec:
      containers:
        - image: rabbitmq:latest
          name: alldaydj-rabbitmq
          ports:
            - containerPort: 5672
              name: rabbitmq
