kubernetes/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alldaydj-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: alldaydj-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alldaydj-frontend
                port:
                  number: 80
